src/pyupgrade/snapshots/ruff__pyupgrade__tests__U014_U014.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    ConvertNamedTupleFunctionalToClass: NT1
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 61
  fix:
    patch:
      content: "class NT1(NamedTuple):\n    a: int\n    b: tuple[str, ...]"
      location:
        row: 5
        column: 0
      end_location:
        row: 5
        column: 61
- kind:
    ConvertNamedTupleFunctionalToClass: NT2
  location:
    row: 8
    column: 0
  end_location:
    row: 12
    column: 1
  fix:
    patch:
      content: "class NT2(NamedTuple):\n    a: int\n    b: str = 'foo'\n    c: list[bool] = [True]"
      location:
        row: 8
        column: 0
      end_location:
        row: 12
        column: 1
- kind:
    ConvertNamedTupleFunctionalToClass: NT3
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 56
  fix:
    patch:
      content: "class NT3(typing.NamedTuple):\n    a: int\n    b: str"
      location:
        row: 15
        column: 0
      end_location:
        row: 15
        column: 56

