src/pyupgrade/snapshots/ruff__pyupgrade__tests__U015_U015.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: RedundantOpenModes
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 16
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 10
      end_location:
        row: 1
        column: 15
- kind: RedundantOpenModes
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 17
  fix:
    patch:
      content: ""
      location:
        row: 2
        column: 10
      end_location:
        row: 2
        column: 16
- kind: RedundantOpenModes
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 17
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 3
        column: 12
      end_location:
        row: 3
        column: 16
- kind: RedundantOpenModes
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 18
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 4
        column: 12
      end_location:
        row: 4
        column: 17
- kind: RedundantOpenModes
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 16
  fix:
    patch:
      content: ""
      location:
        row: 5
        column: 10
      end_location:
        row: 5
        column: 15
- kind: RedundantOpenModes
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 17
  fix:
    patch:
      content: ""
      location:
        row: 6
        column: 10
      end_location:
        row: 6
        column: 16
- kind: RedundantOpenModes
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 32
  fix:
    patch:
      content: ""
      location:
        row: 7
        column: 8
      end_location:
        row: 7
        column: 13
- kind: RedundantOpenModes
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 15
  fix:
    patch:
      content: "\"w\""
      location:
        row: 8
        column: 10
      end_location:
        row: 8
        column: 14
- kind: RedundantOpenModes
  location:
    row: 10
    column: 5
  end_location:
    row: 10
    column: 21
  fix:
    patch:
      content: ""
      location:
        row: 10
        column: 15
      end_location:
        row: 10
        column: 20
- kind: RedundantOpenModes
  location:
    row: 12
    column: 5
  end_location:
    row: 12
    column: 22
  fix:
    patch:
      content: ""
      location:
        row: 12
        column: 15
      end_location:
        row: 12
        column: 21
- kind: RedundantOpenModes
  location:
    row: 14
    column: 5
  end_location:
    row: 14
    column: 22
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 14
        column: 17
      end_location:
        row: 14
        column: 21
- kind: RedundantOpenModes
  location:
    row: 16
    column: 5
  end_location:
    row: 16
    column: 23
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 16
        column: 17
      end_location:
        row: 16
        column: 22
- kind: RedundantOpenModes
  location:
    row: 18
    column: 5
  end_location:
    row: 18
    column: 21
  fix:
    patch:
      content: ""
      location:
        row: 18
        column: 15
      end_location:
        row: 18
        column: 20
- kind: RedundantOpenModes
  location:
    row: 20
    column: 5
  end_location:
    row: 20
    column: 22
  fix:
    patch:
      content: ""
      location:
        row: 20
        column: 15
      end_location:
        row: 20
        column: 21
- kind: RedundantOpenModes
  location:
    row: 22
    column: 5
  end_location:
    row: 22
    column: 39
  fix:
    patch:
      content: ""
      location:
        row: 22
        column: 15
      end_location:
        row: 22
        column: 20
- kind: RedundantOpenModes
  location:
    row: 24
    column: 5
  end_location:
    row: 24
    column: 22
  fix:
    patch:
      content: "\"w\""
      location:
        row: 24
        column: 17
      end_location:
        row: 24
        column: 21
- kind: RedundantOpenModes
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 27
  fix:
    patch:
      content: ""
      location:
        row: 27
        column: 21
      end_location:
        row: 27
        column: 26
- kind: RedundantOpenModes
  location:
    row: 28
    column: 0
  end_location:
    row: 28
    column: 28
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 28
        column: 23
      end_location:
        row: 28
        column: 27
- kind: RedundantOpenModes
  location:
    row: 30
    column: 5
  end_location:
    row: 30
    column: 32
  fix:
    patch:
      content: ""
      location:
        row: 30
        column: 26
      end_location:
        row: 30
        column: 31
- kind: RedundantOpenModes
  location:
    row: 32
    column: 5
  end_location:
    row: 32
    column: 33
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 32
        column: 28
      end_location:
        row: 32
        column: 32
- kind: RedundantOpenModes
  location:
    row: 35
    column: 5
  end_location:
    row: 35
    column: 21
  fix:
    patch:
      content: ""
      location:
        row: 35
        column: 15
      end_location:
        row: 35
        column: 20
- kind: RedundantOpenModes
  location:
    row: 35
    column: 29
  end_location:
    row: 35
    column: 45
  fix:
    patch:
      content: ""
      location:
        row: 35
        column: 39
      end_location:
        row: 35
        column: 44
- kind: RedundantOpenModes
  location:
    row: 37
    column: 5
  end_location:
    row: 37
    column: 22
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 37
        column: 17
      end_location:
        row: 37
        column: 21
- kind: RedundantOpenModes
  location:
    row: 37
    column: 30
  end_location:
    row: 37
    column: 47
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 37
        column: 42
      end_location:
        row: 37
        column: 46
- kind: RedundantOpenModes
  location:
    row: 40
    column: 0
  end_location:
    row: 40
    column: 21
  fix:
    patch:
      content: ""
      location:
        row: 40
        column: 10
      end_location:
        row: 40
        column: 20
- kind: RedundantOpenModes
  location:
    row: 41
    column: 0
  end_location:
    row: 41
    column: 26
  fix:
    patch:
      content: ""
      location:
        row: 41
        column: 15
      end_location:
        row: 41
        column: 25
- kind: RedundantOpenModes
  location:
    row: 42
    column: 0
  end_location:
    row: 42
    column: 26
  fix:
    patch:
      content: ""
      location:
        row: 42
        column: 5
      end_location:
        row: 42
        column: 15
- kind: RedundantOpenModes
  location:
    row: 44
    column: 5
  end_location:
    row: 44
    column: 26
  fix:
    patch:
      content: ""
      location:
        row: 44
        column: 15
      end_location:
        row: 44
        column: 25
- kind: RedundantOpenModes
  location:
    row: 46
    column: 5
  end_location:
    row: 46
    column: 31
  fix:
    patch:
      content: ""
      location:
        row: 46
        column: 20
      end_location:
        row: 46
        column: 30
- kind: RedundantOpenModes
  location:
    row: 48
    column: 5
  end_location:
    row: 48
    column: 31
  fix:
    patch:
      content: ""
      location:
        row: 48
        column: 10
      end_location:
        row: 48
        column: 20
- kind: RedundantOpenModes
  location:
    row: 51
    column: 0
  end_location:
    row: 51
    column: 22
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 51
        column: 17
      end_location:
        row: 51
        column: 21
- kind: RedundantOpenModes
  location:
    row: 52
    column: 0
  end_location:
    row: 52
    column: 27
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 52
        column: 22
      end_location:
        row: 52
        column: 26
- kind: RedundantOpenModes
  location:
    row: 53
    column: 0
  end_location:
    row: 53
    column: 27
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 53
        column: 10
      end_location:
        row: 53
        column: 14
- kind: RedundantOpenModes
  location:
    row: 55
    column: 5
  end_location:
    row: 55
    column: 27
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 55
        column: 22
      end_location:
        row: 55
        column: 26
- kind: RedundantOpenModes
  location:
    row: 57
    column: 5
  end_location:
    row: 57
    column: 32
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 57
        column: 27
      end_location:
        row: 57
        column: 31
- kind: RedundantOpenModes
  location:
    row: 59
    column: 5
  end_location:
    row: 59
    column: 32
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 59
        column: 15
      end_location:
        row: 59
        column: 19
- kind: RedundantOpenModes
  location:
    row: 62
    column: 0
  end_location:
    row: 62
    column: 110
  fix:
    patch:
      content: ""
      location:
        row: 62
        column: 15
      end_location:
        row: 62
        column: 25
- kind: RedundantOpenModes
  location:
    row: 63
    column: 0
  end_location:
    row: 63
    column: 110
  fix:
    patch:
      content: ""
      location:
        row: 63
        column: 99
      end_location:
        row: 63
        column: 109
- kind: RedundantOpenModes
  location:
    row: 64
    column: 0
  end_location:
    row: 64
    column: 110
  fix:
    patch:
      content: ""
      location:
        row: 64
        column: 58
      end_location:
        row: 64
        column: 68
- kind: RedundantOpenModes
  location:
    row: 65
    column: 0
  end_location:
    row: 65
    column: 110
  fix:
    patch:
      content: ""
      location:
        row: 65
        column: 5
      end_location:
        row: 65
        column: 15
- kind: RedundantOpenModes
  location:
    row: 67
    column: 0
  end_location:
    row: 67
    column: 111
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 67
        column: 22
      end_location:
        row: 67
        column: 26
- kind: RedundantOpenModes
  location:
    row: 68
    column: 0
  end_location:
    row: 68
    column: 111
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 68
        column: 106
      end_location:
        row: 68
        column: 110
- kind: RedundantOpenModes
  location:
    row: 69
    column: 0
  end_location:
    row: 69
    column: 111
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 69
        column: 65
      end_location:
        row: 69
        column: 69
- kind: RedundantOpenModes
  location:
    row: 70
    column: 0
  end_location:
    row: 70
    column: 111
  fix:
    patch:
      content: "\"rb\""
      location:
        row: 70
        column: 10
      end_location:
        row: 70
        column: 14

