src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP002_UP002.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: TypingTextStrAlias
  location:
    row: 3
    column: 21
  end_location:
    row: 3
    column: 25
  fix:
    content: str
    location:
      row: 3
      column: 21
    end_location:
      row: 3
      column: 25

