src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP003_UP003.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    TypeOfPrimitive: Str
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 8
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 8
    content: str
    message: ~
  parent: ~
- kind:
    TypeOfPrimitive: Bytes
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 9
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 9
    content: bytes
    message: ~
  parent: ~
- kind:
    TypeOfPrimitive: Int
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix:
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 7
    content: int
    message: ~
  parent: ~
- kind:
    TypeOfPrimitive: Float
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 8
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 8
    content: float
    message: ~
  parent: ~
- kind:
    TypeOfPrimitive: Complex
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 8
  fix:
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 8
    content: complex
    message: ~
  parent: ~

