src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP006_UP006.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UsePEP585Annotation: List
  location:
    row: 4
    column: 9
  end_location:
    row: 4
    column: 20
  fix:
    location:
      row: 4
      column: 9
    end_location:
      row: 4
      column: 20
    content: list
    message: ~
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 11
    column: 9
  end_location:
    row: 11
    column: 13
  fix:
    location:
      row: 11
      column: 9
    end_location:
      row: 11
      column: 13
    content: list
    message: ~
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 15
  fix:
    location:
      row: 18
      column: 9
    end_location:
      row: 18
      column: 15
    content: list
    message: ~
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 25
    column: 9
  end_location:
    row: 25
    column: 14
  fix:
    location:
      row: 25
      column: 9
    end_location:
      row: 25
      column: 14
    content: list
    message: ~
  parent: ~

