src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP007_UP007.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: UsePEP604Annotation
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 22
  fix:
    location:
      row: 6
      column: 9
    end_location:
      row: 6
      column: 22
    content: str | None
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 10
    column: 9
  end_location:
    row: 10
    column: 29
  fix:
    location:
      row: 10
      column: 9
    end_location:
      row: 10
      column: 29
    content: str | None
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 14
    column: 9
  end_location:
    row: 14
    column: 45
  fix:
    location:
      row: 14
      column: 9
    end_location:
      row: 14
      column: 45
    content: "str | int | Union[float, bytes]"
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 14
    column: 25
  end_location:
    row: 14
    column: 44
  fix:
    location:
      row: 14
      column: 25
    end_location:
      row: 14
      column: 44
    content: float | bytes
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 31
  fix:
    location:
      row: 18
      column: 9
    end_location:
      row: 18
      column: 31
    content: str | int
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 22
    column: 9
  end_location:
    row: 22
    column: 33
  fix:
    location:
      row: 22
      column: 9
    end_location:
      row: 22
      column: 33
    content: str | int
    message: ~
  parent: ~
- kind: UsePEP604Annotation
  location:
    row: 26
    column: 9
  end_location:
    row: 26
    column: 40
  fix:
    location:
      row: 26
      column: 9
    end_location:
      row: 26
      column: 40
    content: "(str, int) | float"
    message: ~
  parent: ~

