src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP008_UP008.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: SuperCallWithParameters
  location:
    row: 17
    column: 17
  end_location:
    row: 17
    column: 35
  fix:
    location:
      row: 17
      column: 17
    end_location:
      row: 17
      column: 35
    content: super()
    message: ~
  parent: ~
- kind: SuperCallWithParameters
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 26
  fix:
    location:
      row: 18
      column: 8
    end_location:
      row: 18
      column: 26
    content: super()
    message: ~
  parent: ~
- kind: SuperCallWithParameters
  location:
    row: 19
    column: 8
  end_location:
    row: 22
    column: 9
  fix:
    location:
      row: 19
      column: 8
    end_location:
      row: 22
      column: 9
    content: super()
    message: ~
  parent: ~
- kind: SuperCallWithParameters
  location:
    row: 36
    column: 8
  end_location:
    row: 36
    column: 28
  fix:
    location:
      row: 36
      column: 8
    end_location:
      row: 36
      column: 28
    content: super()
    message: ~
  parent: ~
- kind: SuperCallWithParameters
  location:
    row: 50
    column: 12
  end_location:
    row: 50
    column: 32
  fix:
    location:
      row: 50
      column: 12
    end_location:
      row: 50
      column: 32
    content: super()
    message: ~
  parent: ~

