src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP009_UP009_0.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: PEP3120UnnecessaryCodingComment
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 2
      column: 0
    content: ""
    message: ~
  parent: ~

